--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
     "@ocrv/vue-tailwind-pagination": "^0.0.4",
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
-    "tailwindcss": "^3.2.4",
-    "v-pagination-3": "^0.1.7",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.1.6",
+    "vuetify": "^3.0.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
